--- a/client/src/pages/register/Register.css
+++ b/client/src/pages/register/Register.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: 800px;
+    
 }
 
 .registerLeft,
@@ -37,8 +38,8 @@
     font-weight: 900;
     color: #1775ee;
     margin-bottom: 10px;
-    text-shadow: 0 0 5px #e2e2e2, 0 0 10px #e2e2e2, 0 0 15px #e2e2e2,
-        0 0 20px #e2e2e2, 0 0 30px rgb(181, 255, 251),
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 15px #ffffff,
+        0 0 20px #ffffff, 0 0 30px rgb(181, 255, 251),
         0 0 40px rgb(181, 255, 251), 0 0 55px rgb(181, 255, 251),
         0 0 75px rgb(181, 255, 251);
 
@@ -67,7 +68,7 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     border: 1px solid rgb(190, 203, 247);
     border-radius: 10px;
     align-items: center;
@@ -87,6 +88,7 @@
     border: 1px solid lightgray;
     font-size: 18px;
     padding-left: 20px;
+    margin: 5px;
     min-width: 250px;
 }
 
@@ -105,6 +107,7 @@
     max-width: 200px;
     height: 45px;
     border-radius: 10px;
+    margin-top: 20px;
     border: none;
     background-color: #0e992c;
     color: white;
@@ -134,6 +137,7 @@
     padding-right: 30px;
     width: 60%;
     max-width: 150px;
+    margin-top: 10px;
 }
 
 .loginButton2 {
@@ -147,23 +151,25 @@
     font-size: 20px;
     font-weight: 500;
     padding-left: 29px;
+    
 }
 
 @media screen and (max-width: 800px) {
     .register {
-        height: 110vh;
-        width: auto;
+        height: 100vh;
+        width: 100%;
         overflow-y: scroll;
         overflow-x: hidden;
+        padding-top: 100px;
     }
     .registerWrapper {
-        width: 70%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        max-width: 280px;
-        margin: 100px 1px;
+        max-width: 300px;
+        margin: 150px 1px 1px;
     }
 
     .registerLeft,
@@ -177,19 +183,20 @@
     }
 
     .registerLeft {
-        padding-top: 100px;
+        margin: 10px auto;
+        padding: 10px;
     }
     .registerRight {
-        padding-bottom: 100px;
+        padding-bottom: 118px;
     }
 
     .registerBox {
-        height: 350px;
+        height: 400px;
         width: 80%;
         margin-bottom: 200px;
-        padding: 10px 0px;
-        margin: 10px;
-        min-width: 260px;
+        padding: 0px;
+        margin: 10px 10px 200px;
+        min-width: 280px;
     }
 
     .registerInput {
@@ -200,13 +207,13 @@
     }
 
     .registerLogo {
-        font-size: 50px;
+        font-size: 45px;
         font-weight: 900;
         color: #1775ee;
         margin-bottom: 10px;
 
         width: 100%;
-        margin: 10px auto 20px;
+        margin: 65px auto 20px;
         letter-spacing: 1.5px;
     }
 
@@ -220,7 +227,7 @@
     }
 
     .registerDesc {
-        font-size: 18px;
+        font-size: 22px;
         color: rgb(255, 255, 255);
         text-shadow: 1px 1px rgb(68, 68, 68);
         font-weight: 600;
@@ -234,12 +241,13 @@
     .registerButton {
         height: 40px;
         font-size: 16px;
+        width: 150px;
         margin-bottom: 0px;
     }
 
     .loginRegisterButtonLink2 {
-        max-width: 125px;
         height: 40px;
+        width: 120px;
     }
 
     .loginButton2 {
